[package]
name = "fakehttp-win"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
ctrlc = "3.4.7"
itertools = "0.14.0"
pnet_packet = "0.35.0"
rand = "0.9.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
windivert = "0.6.0"
windivert-sys = "0.10.0"
windows = { version = "0.61.3", features = ["Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock"] }